--- a/src/Components/Login-page/Login-page.scss
+++ b/src/Components/Login-page/Login-page.scss
@@ -2,7 +2,7 @@
     
     width: 250px;
     height: 30px;
-
+    margin-left: 19%;
     background: #FFFFFF;
     border: 2px solid #C4C1BD;
     border-radius: 5px;
@@ -38,8 +38,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 25px;
-    align-items: center;
-    text-align: center;
+    margin-left: 100%;
 
     color: #FFFFFF;
 }
