try to do routing

--- a/src/Components/Login-page/Login-page.scss
+++ b/src/Components/Login-page/Login-page.scss
@@ -1,12 +1,9 @@
 .input {
-
   width: 250px;
   height: 30px;
-  background: #FFFFFF;
-  border: 2px solid #C4C1BD;
+  background: #ffffff;
+  border: 2px solid #c4c1bd;
   border-radius: 5px;
-
-
 }
 
 .loginbox {
@@ -18,22 +15,20 @@
   box-shadow: 3px 3px 0px #463930;
   border-radius: 15px;
   margin-top: 75px;
-
 }
 
 .buttonis-link {
-
   width: 120px;
   height: 60px;
   margin-top: 46px;
-  background: #A99282;
-  border: 2px solid #733E2F;
-  box-shadow: 2px 2px 0px #733E2F;
+  background: #a99282;
+  border: 2px solid #733e2f;
+  box-shadow: 2px 2px 0px #733e2f;
   border-radius: 12px;
   font-style: normal;
   font-weight: normal;
   font-size: 25px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .label {
@@ -43,9 +38,7 @@
   font-size: 18px;
   line-height: 21px;
   display: flex;
-  color: #FFFFFF;
-
-
+  color: #ffffff;
 }
 
 .LOGO {
@@ -55,5 +48,4 @@
   line-height: 21px;
   display: flex;
   text-indent: 75px;
-
 }
