--- a/src/Components/Login-page/Login-page.scss
+++ b/src/Components/Login-page/Login-page.scss
@@ -1,14 +1,3 @@
-.input{
-    
-    width: 250px;
-    height: 30px;
-    background: #FFFFFF;
-    border: 2px solid #C4C1BD;
-    border-radius: 5px;
-    
-    
-}
-
 .loginbox {
     width: 400px;
     height: 250px;
@@ -17,47 +6,44 @@
     box-sizing: border-box;
     box-shadow: 3px 3px 0px #463930;
     border-radius: 15px;
-    margin-top: 75px;
+    margin-top: 100px;
     
 }
 
-.buttonis-link{
+.logbutton{
     
     width: 120px;
     height: 60px;
-    margin-top: 46px;
+    margin-top: 56px;
     background: #A99282;
     border: 2px solid #733E2F;
     box-shadow: 2px 2px 0px #733E2F;
     border-radius: 12px;
-    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 25px;
     color: #FFFFFF;
 }
 
-.label{
-    margin-top: 38px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px;
-    display: flex;
-    color: #FFFFFF;
-
-
-}
 
 .LOGO{
-    font-family: Roboto;
+
     font-style: normal;
     font-weight: normal;
     font-size: 100px;
     line-height: 21px;
     display: flex;
-    text-indent: 75px;
+    margin-top: 20%;
 
 }
 
+.loginput{
+    width: 250px;
+    height: 30px;
+    border: 2px solid #C4C1BD;
+    border-radius: 5px;
+}
+.label{
+    margin-top: 40px;
+    margin-bottom: 15px;
+}
