Flexbox this flexbox that

--- a/src/Components/Login-page/Login-page.scss
+++ b/src/Components/Login-page/Login-page.scss
@@ -1,49 +1,73 @@
 .loginbox {
-    width: 400px;
-    height: 250px;
-    background: #897165;
-    border: 3px solid #463930;
-    box-sizing: border-box;
-    box-shadow: 3px 3px 0px #463930;
-    border-radius: 15px;
-    margin-top: 100px;
+  width: 350px;
+  height: 250px;
+  background: #897165;
+  border: 3px solid #463930;
+  box-sizing: border-box;
+  box-shadow: 3px 3px 0px #463930;
+  border-radius: 15px;
 
 }
 
-.logbutton{
-
-    width: 120px;
-    height: 60px;
-    margin-top: 56px;
-    background: #A99282;
-    border: 2px solid #733E2F;
-    box-shadow: 2px 2px 0px #733E2F;
-    border-radius: 12px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 25px;
-    color: #FFFFFF;
+.logbutton {
+  width: 120px;
+  height: 60px;
+  margin: 30px 0 50px 0;
+  background: #A99282;
+  border: 2px solid #733E2F;
+  box-shadow: 2px 2px 0px #733E2F;
+  border-radius: 12px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px;
+  color: #FFFFFF;
 }
 
 
-.LOGO{
-
-    font-style: normal;
-    font-weight: normal;
-    font-size: 100px;
-    line-height: 21px;
-    display: flex;
-    margin-top: 20%;
+.LOGO {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 100px;
 
 }
 
-.loginput{
-    width: 250px;
-    height: 30px;
-    border: 2px solid #C4C1BD;
-    border-radius: 5px;
+.loginput {
+  width: 250px;
+  height: 30px;
+  border: 2px solid #C4C1BD;
+  border-radius: 5px;
 }
-.label{
-    margin-top: 40px;
-    margin-bottom: 15px;
+
+.label {
+  margin-bottom: 15px;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.full {
+  height: 100vh;
+}
+
+.lbox {
+  height: 100%;
+}
+
+.top {
+  margin-bottom: 40px !important;
+}
+
+.bot {
+  margin-bottom: 0.75rem;
+}
+
+// this is important
+@import "~bulma/sass/utilities/_all.sass";
+@import "~bulma/sass/base/_all.sass";
+// other need
+@import "~bulma/sass/elements/button.sass";
+@import "~bulma/sass/form/_all.sass";
