--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: #CDC0B0;
+  background-color: #ffffff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
