--- a/src/Components/Palette.scss
+++ b/src/Components/Palette.scss
@@ -1,4 +1,6 @@
-$orangebase :#f58b54;
-$light :#dfddc7;
+$orangebase :#F6AD78;
+$light :#F4F2F0 ;
+$hoverlight :rgb(240, 224, 208) ;
 $orangeline :#a34a28;
 $brown :#211717;
+$halfgray :#808080
