--- a/src/Components/Chat-page/Chat.scss
+++ b/src/Components/Chat-page/Chat.scss
@@ -7,7 +7,7 @@ $gray: #92959E;
   border-radius: 5px;
   border: 1px solid #DBDBDB;
   box-sizing: border-box;
-  box-shadow: 4px 0px 0px;
+  box-shadow: 4px 0px 0px #219EE5;
   background-color: white;
   text-align: center;
   margin-right: 20px;
@@ -18,7 +18,8 @@ $gray: #92959E;
   border-radius: 5px;
   border: 1px solid $orange;
   box-sizing: border-box;
-  box-shadow: -4px 0px 0px;
+  box-shadow: -4px 0px 0px $orange;
+
   background-color: white;
   text-align: center;
   margin-left: 20px;
@@ -31,7 +32,9 @@ $gray: #92959E;
   margin-top: 20px;
   flex-direction: row;
 
-  & p {
+  &>p {
+    color: gray;
+    font-size: 12px;
     align-self: flex-end;
     margin: 0 10px;
   }
@@ -50,16 +53,39 @@ $gray: #92959E;
 }
 
 .chatfeedbox {
+
+  width: 100%;
   display: flex;
   flex-direction: column;
-  width: 70vw;
 }
 
 .chatcontainer {
+  margin: 0 auto;
   display: flex;
   height: 100vh;
+  flex-direction: column-reverse;
   align-items: flex-end;
+  max-width: 600px;
 }
+
+.sendcontainer {
+  display: flex;
+  width: 100%;
+  margin: 20px 0px 20px 0px;
+
+  &>input {
+
+    margin: 5px auto 5px 35px;
+    width: 80%;
+
+  }
+
+  &>button {
+
+    margin: 5px 35px 5px auto;
+  }
+}
+
 
 @import "~bulma/sass/utilities/_all.sass";
 @import "~bulma/sass/base/_all.sass";
