--- a/src/Components/Advisor-page/Adv.scss
+++ b/src/Components/Advisor-page/Adv.scss
@@ -21,9 +21,12 @@
 }
 .stdlistcontain
 {
-    margin: 55px 10px 5px 0px;
+    overflow-y: scroll;
+    margin: 55px 0px 5px 0px;
     height: 100vh;
     background-color: rgb(235, 235, 235);
+    min-width: 300px;
+
 }
 
 .studenprofile{
@@ -43,4 +46,11 @@
     flex-direction:column;
     margin: 5px 20px;
 
+}
+
+.Advchatcontainer{
+    width: 100%;
+    height: 100%;
+    margin-top: 55px;
+    border: 3px solid #DBDBDB;
 }
