--- a/src/Components/Chat-page/Chat.scss
+++ b/src/Components/Chat-page/Chat.scss
@@ -65,7 +65,7 @@ $gray: #92959E;
   border-radius: 5px;
   border: 2px solid gray;
   margin: 0 auto;
-  margin-top: 60px;
+  margin-top: 3.25rem;
 
   display: flex;
   height: 90vh;
