--- a/src/Components/Advisor-page/Adv.scss
+++ b/src/Components/Advisor-page/Adv.scss
@@ -7,6 +7,7 @@ $gray: #92959E;
 .Advflex-container{
     display: flex;
     justify-content: flex-start;
+    max-height: 100vh;
     overflow: hidden;
 }
 
@@ -29,7 +30,7 @@ $gray: #92959E;
 .stdlistcontain
 {
     overflow-y: scroll;
-    margin: 55px 0px 5px 0px;
+    margin: 3.25rem 0px 5px 0px;
     height: 100vh;
     background-color: rgb(235, 235, 235);
     min-width: 300px;
@@ -68,16 +69,16 @@ $gray: #92959E;
     width: 100%;
     display: flex;
     flex-direction: column;
+    
   }
   
   .chatcontainer {
   
     margin: 0 auto;
     border: 1px solid white !important;
-    margin-top: 55px;
-    margin-bottom: 5px; 
+    margin-top: 3.25rem;
     display: flex;
-    height: 95vh;
+    height: 90vh;
     flex-direction: column-reverse;
     align-items: flex-end;
     max-width: 100% !important;
@@ -104,6 +105,12 @@ $gray: #92959E;
     }
   }
   
+  .talkwith{
+      display: flex;
+      background-color: #DBDBDB;
+      height: 75px;
+      width: 100%;
+  }
   
   
   @import "~bulma/sass/utilities/_all.sass";
