--- a/src/Components/Login-page/Login-page.scss
+++ b/src/Components/Login-page/Login-page.scss
@@ -2,21 +2,14 @@
 .loginbox {
   width: 350px;
   height: 250px;
-  background: #F6AD78;
-  border: 3px solid #E57421;
-  box-sizing: border-box;
-  box-shadow: 3px 3px 0px #E57421;
+  background-color: #363636;;
   border-radius: 15px;
 
 }
 
 .logbutton {
   margin: 30px 0 50px 0;
-  background: #F6AD78 !important;
-  border: 2px solid #E57421 !important;
-  box-sizing: border-box !important;
-  box-shadow: 2px 2px 0px #E57421 !important;
-  border-radius: 12px !important;
+
 }
 
 .LOGO {
@@ -31,7 +24,7 @@
   font-style: normal;
   font-weight: normal;
   line-height: 21px;
-  color: #000000 !important;
+  color: #ffffff !important;
 }
 
 .flex-container {
