--- a/src/Components/Advisor-page/Adv.scss
+++ b/src/Components/Advisor-page/Adv.scss
@@ -1,121 +1,175 @@
 $green: #86BB71;
 $blue: #94C2ED;
 $orange: #E38968;
-$gray: #92959E;
+$gray: rgb(235, 235, 235);
 
-
-.Advflex-container{
-    display: flex;
-    justify-content: flex-start;
-    max-height: 100vh;
-    overflow: hidden;
+.Advflex-container {
+  display: flex;
+  justify-content: flex-start;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
-.stdcontainer
- {
+.stdcontainer {
   border-radius: 5px;
-  border: 1px solid #DBDBDB;
+  border: 1px solid $gray;
   background-color: white;
-  
+
   margin: 10px 15px 0px 15px;
   max-width: 300px;
-  
-  & > Sname {
-    color: gray;
-    font-size: 12px;
-    margin: 0 10px;
+
+  & .Sname {
+    color: rgb(56, 56, 56);
+  }
+
+  &:hover {
+    background-color: gray;
+    color: white;
+
+    & p {
+      color: rgb(255, 255, 255);
+
+    }
   }
 
 }
-.stdlistcontain
-{
-    overflow-y: scroll;
-    margin: 3.25rem 0px 5px 0px;
-    height: 100vh;
-    background-color: rgb(235, 235, 235);
-    min-width: 300px;
 
+.stdlistcontain {
+  overflow-y: scroll;
+  padding: 3.25rem 0px 5px 0px;
+  height: 100vh;
+  background-color: $gray;
+  min-width: 300px;
 }
 
-.studenprofile{
-    display: flex;
-  
-    flex-direction: row;
+.studenprofile {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 
-  &>p {
+  & p {
     color: black;
+    font-weight: bolder;
     font-size: 15px;
     margin: 0px 10px 0px 0px;
-    
+
   }
 }
-.profilebox{
-    display: flex;
-    flex-direction:column;
-    margin: 5px 20px;
+
+.profilebox {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 20px;
 
 }
 
-.Advchatcontainer{
-    width: 100%;
-    height: 100vh;
-    border: 3px solid #DBDBDB;
+.Advchatcontainer {
+  width: 100%;
+  height: 100vh;
+}
+
+.lott {
+  background-color: $gray;
 }
 
 //chat
 
-  .chatfeedbox {
-    overflow-y: scroll;
+.chatfeedbox {
+  overflow-y: scroll;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.chatcontainer {
+
+  margin: 0 auto;
+  border: 0 solid white !important;
+  margin-top: 3.25rem;
+  display: flex;
+  height: 90vh;
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  max-width: 100% !important;
+
+}
+
+.sendcontainer {
+
+  display: flex;
+  width: 100%;
+  margin: 20px auto auto auto;
+  justify-content: space-between;
+
+  &>input {
+
+    margin: 5px 0 5px 35px;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    
+
+
   }
-  
-  .chatcontainer {
-  
-    margin: 0 auto;
-    border: 1px solid white !important;
-    margin-top: 3.25rem;
-    display: flex;
-    height: 90vh;
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    max-width: 100% !important;
-    
+
+  &>button {
+
+    margin: 5px 35px 5px 10px;
   }
-  
-  .sendcontainer {
-  
-    display: flex;
-    width: 100%;
-    margin: 20px 0px 20px 0px;
-    
-  
-    &>input {
-  
-      margin: 5px auto 5px 35px;
-      width: 80%;
-  
-    }
-  
-    &>button {
-  
-      margin: 5px 35px 5px auto;
-    }
+}
+
+.talkwith {
+  display: flex;
+  background-color: $gray;
+  height: 75px;
+  width: 100%;
+  justify-content: space-between;
+
+
+
+}
+
+.tablebutton {
+  margin: auto 35px;
+  color: #4a4a4a;
+  font-size: 20px;
+}
+
+.stdname {
+  font-size: 20px;
+  font-weight: bolder;
+  margin: auto 10px;
+}
+
+.selected {
+  background-color: rgb(56, 56, 56);
+  color: white;
+
+
+  & p,
+  & .Sname {
+    color: rgb(255, 255, 255);
+
   }
-  
-  .talkwith{
-      display: flex;
-      background-color: #DBDBDB;
-      height: 75px;
-      width: 100%;
-  }
-  
-  
-  @import "~bulma/sass/utilities/_all.sass";
-  @import "~bulma/sass/base/_all.sass";
-  // other need
-  //@import "~bulma/sass/";
-  @import "~bulma/sass/elements/button.sass";
-  @import "~bulma/sass/form/_all.sass";
+}
+
+.cri {
+  color: #7f0000 !important;
+}
+
+.hi {
+  color: #d84315 !important;
+}
+
+.med {
+  color: #fcd734 !important;
+}
+
+.lo {
+  color: #43a047 !important;
+}
+
+@import "~bulma/sass/utilities/_all.sass";
+@import "~bulma/sass/base/_all.sass";
+// other need
+//@import "~bulma/sass/";
+@import "~bulma/sass/elements/button.sass";
+@import "~bulma/sass/form/_all.sass";
