--- a/src/Components/Table-page/Table-page.scss
+++ b/src/Components/Table-page/Table-page.scss
@@ -3,7 +3,7 @@
 
 .table{
     margin-top: 10%;
-    margin-bottom: 20%;
+    margin-bottom: 5%;
     border-collapse: collapse;
     border-radius: 1em;
     min-width: 200px;
@@ -22,11 +22,12 @@
   width: 10%;
 }
 
-$table-head-background-color :$orangebase;
-$table-cell-border: 2px solid $halfgray ;
+$table-head-background-color : rgb(56, 56, 56);
+$table-head-cell-color:white;
+$table-cell-border: 2px solid #bdbdbd;
 $table-striped-row-even-background-color:$light;
-$table-row-hover-background-color:$hoverlight;
-$table-striped-row-even-hover-background-color:$hoverlight;
+$table-row-hover-background-color:#9e9e9e;
+$table-striped-row-even-hover-background-color:#9e9e9e;
 
 
 @import "~bulma/sass/utilities/_all.sass";
