--- a/src/Components/Chat-page/Chat.scss
+++ b/src/Components/Chat-page/Chat.scss
@@ -60,17 +60,16 @@ $gray: #92959E;
   height: 100vh;
 }
 
-.chatcontainer {
+.chatcontainerstu {
 
   border-radius: 5px;
   border: 2px solid gray;
-  margin: 0px;
-  margin-top: 3.25rem;
+  margin: 3.25rem auto 0 auto;
   display: flex;
   height: 100vh;
   flex-direction: column-reverse;
   align-items: flex-end;
-  max-width: 600px;
+  max-width: 600px !important;
 
 }
 
